Version 0.9.4 -> 0.9.5
----------------------
* don't ignore return value of videocodec_register()
* call videocodec_unregister() no matter what on module unload
* remove duplicate MOD_INC/DEC_USE_COUNT from i2c clients (oops)
* a successful call to try_module_get() returns 1, not 0
* change I2C ID probing/scanning to what's used in 2.5.x
* some small documentation updates
* VPX32XX->VPX3220
* add LML33R10 PCI subvendor/-device ID
* fix LML33R10
* fix hang when open()/close() is called while waiting in a sync
* fix MJPEG recording on zr36016/zr36050 cards. -d4 doesn't work,
* s/debug/zr_debug/ to fix symbol conflict for in-kernel code
* Add pci_disable_device() in card release function
* fix memleaks in i2c client error cases
* fix DC30 field order problem and +/- 64 lines noise at top
* fix DC30 quality (by Kieran Morrissey <linux@mgpenguin.net>)
* fix module counting in videocodec modules (patch by Christoph Hellwig
    <hch@lst.de>) and add some sort of emulation of module_put/get for 2.4.x
* fix potential integer overflow (bug detected by Ken Ashcraft
    <kash@stanford.edu>)
* change subfrequency carrier (patch by Douglas Fraser
    <ds-fraser@comcast.net>)
* use msleep() instead of schedule_timeout() (patch by Nishanth Aravamudan
    <nacc@us.ibm.com>)
* fix JPEG COM/APP marker writeing in zr360[56]0
* reduce zoran_do_ioctl() stack size usage (patch by Randy Dunlap
    <rddunlap@osdl.org>)
* fixes for big-endian machines (patch by Ben Capper
    <benandeve@optusnet.com.au>)
* invalid memory access in bt819 driver

Version 0.9.3 -> 0.9.4
----------------------
* Add YUY2 overlay (fullscreen/hardware-scaled)
* use __stringify() for array insmod options
* fix stupid flaw in open() logic (could result in oops)
* fix 2.5.x build
* remove lots of 'dead' includes from zoran_driver.c
* remove DataErr from the zr36060 IRQ Mask, this autoresets the chip when
    it loses sync, which means we don't get a timeout. Much better than